--- a/locales/de_DE.json
+++ b/locales/de_DE.json
@@ -2,7 +2,7 @@
     "actions.digital-clock.twenty-four-format": "24h Format",
     "actions.digital-clock.twenty-four-format.tooltip": "Verwende 24h Format (hh:mm:ss) statt 12h Format (hh:mm:ss am/pm)",
     "actions.digital-clock.show-seconds": "Sekunden anzeigen",
-    "actions.analog-clock.name": "Analog Uhr",
-    "actions.digital-clock.name": "Digital Uhr",
+    "actions.analog-clock.name": "Analoge Uhr",
+    "actions.digital-clock.name": "Digitale Uhr",
     "plugin.name": "Uhren"
 }
