--- a/locales/fr_FR.json
+++ b/locales/fr_FR.json
@@ -1,8 +1,8 @@
 {
-    "actions.digital-clock.twenty-four-format": "24h Format",
-    "actions.digital-clock.twenty-four-format.tooltip": "Verwende 24h Format (hh:mm:ss) statt 12h Format (hh:mm:ss am/pm)",
-    "actions.digital-clock.show-seconds": "Sekunden anzeigen",
-    "actions.analog-clock.name": "Analog Uhr",
-    "actions.digital-clock.name": "Digital Uhr",
-    "plugin.name": "Uhren"
+    "actions.digital-clock.twenty-four-format": "24h format",
+    "actions.digital-clock.twenty-four-format.tooltip": "Utiliser le format 24h (hh:mm:ss) au lieu du format 12h (hh:mm:ss am/pm)",
+    "actions.digital-clock.show-seconds": "Afficher les secondes",
+    "actions.analog-clock.name": "Montre analogique",
+    "actions.digital-clock.name": "Montre numerique",
+    "plugin.name": "Montres"
 }
